--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ out.txt
 /Objects.ser
 /tasks.ser
 /src/main/resources/samurai/database/~$SamuraiItems.xlsx
+src/main/java/samurai7/SamuraiRunner.java
