--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
     id 'java'
     id 'idea'
+    id 'com.github.johnrengelman.shadow' version '1.2.4'
     id 'com.sedmelluq.jdaction' version '1.0.1'
-    id 'application'
 }
 
-mainClassName = "samurai7.SamuraiRunner"
-
-group 'com.github.breadmoirai'
-version 'master-SNAPSHOT'
+group 'net.breadmoirai'
+version '0.1'
 
 sourceCompatibility = 1.8
+
+sourceSets.main.java.exclude('net/breadmoirai/samurai7/responses/list')
 
 repositories {
     jcenter()
@@ -35,8 +35,18 @@ dependencies {
     compile 'org.reflections:reflections:0.9.10'
     //compile 'com.jagrosh:JDA-Utilities:1.2'
     compile 'org.jetbrains:annotations:13.0'
+}
 
-    //test
-    testCompile 'junit:junit:4.11'
-    compile 'org.slf4j:slf4j-simple:1.8.0-alpha2'
+shadowJar.classifier = "withDependencies"
+javadoc.source = sourceSets.main.allJava
+javadoc.failOnError = false
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from "${buildDir}/filteredSrc"
 }
