--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ plugins {
     id 'idea'
     id 'com.github.johnrengelman.shadow' version '1.2.4'
     id 'com.sedmelluq.jdaction' version '1.0.1'
+    id 'maven'
 }
 
-group 'net.breadmoirai'
+group 'com.github.breadmoirai'
 version '0.1'
 
 sourceCompatibility = 1.8
