--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group 'net.breadmoirai'
-version '0.3.3'
+version '0.3.4'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -79,8 +79,6 @@ publishing {
 
 compileJava.options.encoding = 'UTF-8'
 
-jar.baseName = 'SBF'
-
 shadowJar.classifier = "withDependencies"
 javadoc.source = sourceSets.main.allJava
 javadoc.failOnError = false
@@ -92,7 +90,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
-    from "${buildDir}/filteredSrc"
+    from sourceSets.main.java.srcDirs
 }
 
 task jarMake{
