--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.kotlin_version = '1.1.3-2'
     repositories {
         flatDir {
             dirs 'C:/Users/TonTL/Desktop/git/github-release/build/libs'
@@ -24,7 +25,7 @@ plugins {
 apply plugin: 'com.github.breadmoirai.github-release'
 
 group 'com.github.breadmoirai'
-version '0.4.2'
+version '0.4.3'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -43,9 +44,9 @@ dependencies {
     compileOnly 'net.dv8tion:JDA:3.2.0_241'
 
     //Database
-//    compile 'org.jdbi:jdbi3:3.0.0-beta1'
-//    compile 'org.jdbi:jdbi3-parent:3.0.0-beta1'
-//    compile 'org.jdbi:jdbi3-sqlobject:3.0.0-beta1'
+    compile 'org.jdbi:jdbi3:3.0.0-beta1'
+    compile 'org.jdbi:jdbi3-parent:3.0.0-beta1'
+    compile 'org.jdbi:jdbi3-sqlobject:3.0.0-beta1'
 
     //slf4j
 //    compile 'org.slf4j:slf4j-api:1.8.0-alpha2'
@@ -55,6 +56,7 @@ dependencies {
     compile 'org.reflections:reflections:0.9.10'
     //compile 'com.jagrosh:JDA-Utilities:1.2'
     compile 'org.jetbrains:annotations:13.0'
+
 //    compile 'org.apache.commons:commons-lang3:3.6'
 
     //testing
@@ -67,6 +69,7 @@ dependencies {
 
 githubRelease {
     token = new File('github.token').text
+    String version = project.version
     body = """
 ## Adding as Dependency
 ### Gradle
@@ -79,27 +82,38 @@ githubRelease {
 \t}
 
 \tdependencies {
-\t\tcompile 'net.breadmoirai:SamuraiBotFramework:0.3.3'
+\t\tcompile '${project.group}:${project.name}:${project.version}'
 \t}
-"""
-    String version = project.version
-    def maven = """
+    
 ### Maven
+\t<repositories>
+\t\t<repository>
+\t\t\t<snapshots>
+\t\t\t\t<enabled>false</enabled>
+\t\t\t</snapshots>
+\t\t\t<id>bintray-breadmoirai-maven</id>
+\t\t\t<name>bintray</name>
+\t\t\t<url>http://dl.bintray.com/breadmoirai/maven</url>
+\t\t</repository>
+\t</repositories>
+\t<pluginRepositories>
+\t\t<pluginRepository>
+\t\t\t<snapshots>
+\t\t\t\t<enabled>false</enabled>
+\t\t\t</snapshots>
+\t\t\t<id>bintray-breadmoirai-maven</id>
+\t\t\t<name>bintray-plugins</name>
+\t\t\t<url>http://dl.bintray.com/breadmoirai/maven</url>
+\t\t</pluginRepository>
+\t</pluginRepositories>
 
-\\t<repositories>
-\\t\\t<repository>
-\\t\\t\\t<id>jitpack.io</id>
-\\t\\t\\t\\t<url>https://jitpack.io</url>
-\\t\\t</repository>
-\\t</repositories>
-
-\\t<dependency>
-\\t\\t<groupId>com.github.BreadMoirai</groupId>
-\\t\\t<artifactId>Samurai7</artifactId>
-\\t\\t<version>v{${version}}</version>
-\\t</dependency>"""
+\t<dependency>
+\t\t<groupId>${project.group}</groupId>
+\t\t<artifactId>${project.name}</artifactId>
+\t\t<version>${project.version}</version>
+\t\t<type>pom</type>
+\t</dependency>"""
     prerelease = true
-    draft = true
     FilenameFilter filter = { dir, file -> file.contains(version) }
     releaseAssets = jar.destinationDir.listFiles filter
 }
@@ -135,8 +149,6 @@ publishing {
     }
 }
 
-
-
 compileJava.options.encoding = 'UTF-8'
 
 shadowJar.classifier = "withDependencies"
@@ -169,8 +181,10 @@ task javadocDir(type: Copy) {
 task publishJavadoc(type: Exec) {
     dependsOn javadoc
     dependsOn javadocDir
+    """
     commandLine 'bash',
-            """
+        println name
+    }
         cd ${javadocDir.destinationDir.absolutePath}
         git checkout -t origin/gh-pages
         git add .
