--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,6 @@ out.txt
 /tasks.ser
 /src/main/resources/samurai/database/~$SamuraiItems.xlsx
 src/main/java/samurai7/SamuraiRunner.java
-/bintray.key
+/bintray.keys
 /MyDatabase/
 /github.token
