--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
 apply plugin: 'com.github.breadmoirai.github-release'
 
 group 'com.github.breadmoirai'
-version '0.5.TEST_11'
+version '0.6.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -34,7 +34,7 @@ repositories {
 
 dependencies {
     //Discord Java Library
-    compileOnly 'net.dv8tion:JDA:3.2.0_248'
+    compileOnly 'net.dv8tion:JDA:3.3.0_266'
 
     //Database
 //    compile 'org.jdbi:jdbi3:3.0.0-beta1'
@@ -58,6 +58,12 @@ dependencies {
 //    compile 'org.apache.derby:derby:10.13.1.1'
 //    compile 'com.google.api-client:google-api-client:1.22.0'
 //    compile 'com.google.apis:google-api-services-youtube:v3-rev183-1.22.0'
+
+    testCompile('junit:junit:4.12') {
+        exclude group: 'org.hamcrest'
+    }
+    testCompile 'net.dv8tion:JDA:3.3.0_266'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
 
 githubRelease {
