--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ plugins {
     id 'com.jfrog.bintray' version '1.7.3'
     id 'maven-publish'
     id 'signing'
-    id 'com.github.breadmoirai.github-release' version '1.0.0'
+    id 'com.github.breadmoirai.github-release' version '1.0.9'
 }
 
-group 'com.github.breadmoirai'
-version '0.6.2'
+def author = 'breadmoirai'
+group "com.github.${author}"
+version '0.5.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -22,7 +23,7 @@ repositories {
 
 dependencies {
     //Discord Java Library
-    compileOnly 'net.dv8tion:JDA:3.3.0_266'
+    compileOnly 'net.dv8tion:JDA:3.3.1_284'
 
     //Database
 //    compile 'org.jdbi:jdbi3:3.0.0-beta1'
@@ -31,7 +32,7 @@ dependencies {
 
     //slf4j
     compile 'org.slf4j:slf4j-api:1.8.0-alpha2'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+//    compile 'com.squareup.okhttp3:okhttp:3.8.1'
 //    compile 'com.j256.simplemagic:simplemagic:1.10'
     //Utility
     compile 'org.reflections:reflections:0.9.10'
@@ -42,7 +43,7 @@ dependencies {
 
     //testing
 //    compile 'com.sedmelluq:lavaplayer:1.2.42'
-    compile 'org.slf4j:slf4j-simple:1.8.0-alpha2'
+//    compile 'org.slf4j:slf4j-simple:1.8.0-alpha2'
 //    compile 'org.apache.derby:derby:10.13.1.1'
 //    compile 'com.google.api-client:google-api-client:1.22.0'
 //    compile 'com.google.apis:google-api-services-youtube:v3-rev183-1.22.0'
@@ -50,16 +51,22 @@ dependencies {
     testCompile('junit:junit:4.12') {
         exclude group: 'org.hamcrest'
     }
-    testCompile 'net.dv8tion:JDA:3.3.0_266'
+    testCompile 'net.dv8tion:JDA:3.3.1_284'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
 
+def body = "\n## Adding as Dependency\n### Gradle\n```groovy\nrepositories {\n  jcenter()\n}\n\ndependencies {\n  compile '$project.group:$project.name:$project.version'\n}\n```\n\n### Maven\n```xml\n<repository>\n  <id>jcenter</id>\n  <name>jcenter</name>\n  <url>http://jcenter.bintray.com/</url>\n</repository>\n\n<dependency>\n  <groupId>$project.group</groupId>\n  <artifactId>$project.name</artifactId>\n  <version>$project.version</version>\n  <type>pom</type>\n</dependency>\n```"
+
+task printBody {
+    println body
+}
+
 githubRelease {
-    if (hasProperty('github.key')) {
+    //if (hasProperty('github.key')) {
         token = getProperty('github.key').toString()
-    }
+    //}
     String version = project.version
-    body = "\n## Adding as Dependency\n### Gradle\n\n\tallprojects {\n\t\trepositories {\n\t\t\t...\n\t\t\tmaven { url 'https://dl.bintray.com/breadmoirai/maven'}\n\t\t}\n\t}\n\n\tdependencies {\n\t\tcompile '$project.group:$project.name:$project.version\n\t}\n\n### Maven\n\t<repositories>\n\t\t<repository>\n\t\t\t<snapshots>\n\t\t\t\t<enabled>false</enabled>\n\t\t\t</snapshots>\n\t\t\t<id>bintray-breadmoirai-maven</id>\n\t\t\t<name>bintray</name>\n\t\t\t<url>http://dl.bintray.com/breadmoirai/maven</url>\n\t\t</repository>\n\t</repositories>\n\t<pluginRepositories>\n\t\t<pluginRepository>\n\t\t\t<snapshots>\n\t\t\t\t<enabled>false</enabled>\n\t\t\t</snapshots>\n\t\t\t<id>bintray-breadmoirai-maven</id>\n\t\t\t<name>bintray-plugins</name>\n\t\t\t<url>http://dl.bintray.com/breadmoirai/maven</url>\n\t\t</pluginRepository>\n\t</pluginRepositories>\n\n\t<dependency>\n\t\t<groupId>$project.group</groupId>\n\t\t<artifactId>$project.name</artifactId>\n\t\t<version>$project.version</version>\n\t\t<type>pom</type>\n\t</dependency>"
+    it.body = body
     prerelease = true
     FilenameFilter filter = { dir, file -> file.contains(version) }
     releaseAssets = jar.destinationDir.listFiles filter
@@ -67,15 +74,15 @@ githubRelease {
 
 
 bintray {
-    user = 'breadmoirai'
+    user = author
     key = getProperty('bintray.key').toString()
     publications = ["BintrayRelease"]
     publish = true
     pkg {
         repo = 'maven'
-        name = 'SamuraiBotFramework'
+        name = project.name
         licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/breadmoirai/SamuraiBotFramework.git'
+        vcsUrl = "https://github.com/${author}/${project.name}.git"
         version {
             name = project.version
             released = new Date()
