--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ githubRelease {
 
 bintray {
     user = author
-    key = getProperty('bintray.key').toString()
+//    key = getProperty('bintray.key').toString()
     publications = ["BintrayRelease"]
     publish = true
     pkg {
