--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'signing'
     id 'com.github.breadmoirai.github-release' version '1.1.3'
     id 'org.ajoberstar.git-publish' version '0.3.2'
+    id 'jacoco'
 }
 
 final author = 'BreadMoirai'
@@ -18,7 +19,10 @@ version '0.7.3'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-
+repositories {
+    jcenter()
+    mavenCentral()
+}
 
 dependencies {
     //Discord Java Library
@@ -138,9 +142,21 @@ task jarMake {
 task wrapper(type: Wrapper) {
     gradleVersion = '4.2'
 }
-repositories {
-    jcenter()
-    mavenCentral()
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
+
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = false
+        csv.enabled = false
+    }
 }
 
 //System.setProperty('java.awt.headless', 'false')
