--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 notifications:
   webhooks:
-    - https://ptb.discordapp.com/api/webhooks/280240499418464256/cAnfSnpgYERHihPaYffYTfKRIDnnHGwiCjZHeIOTLSBuXaxjjAy16r-8UE68li8enJWn
+    urls:
+      - https://ptb.discordapp.com/api/webhooks/280240499418464256/cAnfSnpgYERHihPaYffYTfKRIDnnHGwiCjZHeIOTLSBuXaxjjAy16r-8UE68li8enJWn
