--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
+before_install:
+  - sudo apt-get install jq
+  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r .assets[0].browser_download_url)
 before_script:
   - chmod +x gradlew
 script:
@@ -8,7 +11,4 @@ script:
   - ./gradlew jacocoTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-notifications:
-  webhooks:
-    urls:
-      - https://ptb.discordapp.com/api/webhooks/280240499418464256/cAnfSnpgYERHihPaYffYTfKRIDnnHGwiCjZHeIOTLSBuXaxjjAy16r-8UE68li8enJWn
+  - java -cp ~/codacy-coverage-reporter-assembly-latest.jar com.codacy.CodacyCoverageReporter -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
