--- a/build.gradle
+++ b/build.gradle
@@ -150,13 +150,16 @@ test {
     }
 }
 
-
 jacocoTestReport {
     reports {
         xml.enabled = true
         html.enabled = false
         csv.enabled = false
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
 }
 
 //task aonoengoeiioa {
