--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile 'org.reflections:reflections:0.9.10'
     compile 'com.typesafe:config:1.3.2'
 
+    compile 'javax.inject:javax.inject:1'
+
     testCompile 'uk.org.lidalia:slf4j-test:1.1.0'
     testCompile('junit:junit:4.12') {
         exclude group: 'org.hamcrest'
