--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ repositories {
 
 dependencies {
     //Discord Java Library
-    compileOnly 'net.dv8tion:JDA:3.5.1_339'
+    compileOnly 'net.dv8tion:JDA:3.6.0_359'
 
     compile 'org.slf4j:slf4j-api:1.7.25'
 
@@ -53,6 +53,8 @@ dependencies {
     compile 'com.typesafe:config:1.3.2'
 
     compile 'javax.inject:javax.inject:1'
+
+//    compile 'org.jetbrains:annotations:16.0.1'
 
     testCompile 'uk.org.lidalia:slf4j-test:1.1.0'
     testCompile('junit:junit:4.12') {
