Use OpenJDK8 for travis Update Javadocs

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'com.github.breadmoirai.github-release' version '2.2.9'
-    id 'org.ajoberstar.git-publish' version '2.1.1'
+    id 'org.ajoberstar.git-publish' version '1.0.1'
     id 'jacoco'
 }
 
@@ -33,7 +33,7 @@ group = "com.github.${author.toLowerCase()}"
 version = '0.13.0-beta'
 final versionDesc = ""
 //project.hasProperty never seems to work properly
-final boolean keysArePresent = false
+final boolean keysArePresent = true
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -74,13 +74,13 @@ javadoc {
 
 githubRelease {
     if (keysArePresent)
-        token = project.getProperty('github.key').toString()
+        token = project.findProperty('github.key').toString()
     String version = project.version
     def title = ""
     it.releaseName = "$version $title"
     it.body = "## Changes\n$versionDesc\n## Adding as Dependency\n### Gradle\n```gradle\nrepositories {\n  jcenter()\n}\n\ndependencies {\n  compile '$project.group:$artifactId:$project.version'\n}\n```\n\n### Maven\n```xml\n<repository>\n  <id>jcenter</id>\n  <name>jcenter</name>\n  <url>http://jcenter.bintray.com/</url>\n</repository>\n\n<dependency>\n  <groupId>$project.group</groupId>\n  <artifactId>$artifactId</artifactId>\n  <version>$project.version</version>\n  <type>pom</type>\n</dependency>\n```"
-    FilenameFilter filter = { dir, file -> file.contains(version) }
-    releaseAssets = jar.destinationDir.listFiles filter
+    releaseAssets = jar.destinationDirectory.asFileTree.filter { file -> file.name.contains(version)}
+    overwrite = true
 //    println releaseAssets.findAll()
 }
 
