--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ group = "com.github.${author.toLowerCase()}"
 version = '0.13.0-beta'
 final versionDesc = ""
 //project.hasProperty never seems to work properly
-final boolean keysArePresent = true
+final boolean keysArePresent = false
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
