--- a/build.gradle
+++ b/build.gradle
@@ -23,15 +23,15 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'com.github.breadmoirai.github-release' version '2.2.9'
-    id 'org.ajoberstar.git-publish' version '1.0.1'
+    id 'org.ajoberstar.git-publish' version '3.0.0-rc.1'
     id 'jacoco'
 }
 
 final author = 'BreadMoirai'
 final artifactId = 'breadbot-framework'
 group = "com.github.${author.toLowerCase()}"
-version = '0.13.0-beta'
-final versionDesc = ""
+version = '0.13.0'
+final versionDesc = "Update JDA from 3.8.3_464 to 4.2.0_225"
 //project.hasProperty never seems to work properly
 final boolean keysArePresent = false
 
@@ -41,29 +41,32 @@ targetCompatibility = 1.8
 repositories {
     jcenter()
     mavenCentral()
+    maven {
+        url  "https://dl.bintray.com/dv8fromtheworld/maven"
+    }
 }
 
 dependencies {
     //Discord Java Library
-    compileOnly 'net.dv8tion:JDA:3.8.3_464'
+    compileOnly 'net.dv8tion:JDA:4.2.0_225'
 
-    compile 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
 
-    compile 'org.reflections:reflections:0.9.10'
-    compile 'com.typesafe:config:1.3.2'
+    implementation 'org.reflections:reflections:0.9.10'
+    implementation 'com.typesafe:config:1.3.2'
 
-    compile 'javax.inject:javax.inject:1'
-    compile 'net.sf.trove4j:trove4j:3.0.3'
+    implementation 'javax.inject:javax.inject:1'
+    implementation 'net.sf.trove4j:trove4j:3.0.3'
 
 //    compile 'org.jetbrains:annotations:16.0.1'
 
-    testCompile 'uk.org.lidalia:slf4j-test:1.1.0'
-    testCompile('junit:junit:4.12') {
+    testImplementation 'uk.org.lidalia:slf4j-test:1.1.0'
+    testImplementation('junit:junit:4.12') {
         exclude group: 'org.hamcrest'
     }
-    testCompile 'net.dv8tion:JDA:3.4.0_318'
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'org.mockito:mockito-core:2.+'
+    testImplementation 'net.dv8tion:JDA:4.2.0_225'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation 'org.mockito:mockito-core:2.+'
 }
 
 javadoc {
